<resources>
    <string-array name="order_array">
        <item> <i>ORDER BY</i> </item>
        <item>DISTANCE</item>
        <item>SCORE</item>
    </string-array>
    <string name="distance">DISTANCE</string>
    <string name="score">SCORE</string>
    <string-array name="distance_array">
        <item> <i>DISTANCE</i> </item>
        <item>100m</item>
        <item>500m</item>
        <item>1000m</item>
        <item>2000m</item>
    </string-array>
    <string-array name="price_array">
        <item> <i>PRICE</i> </item>
        <item>5€</item>
        <item>10€</item>
        <item>20€</item>
        <item>50€</item>
    </string-array>
    <string-array name="type_array">
        <item> <i>CUSINE TYPE</i> </item>
        <item>ETHNIC</item>
        <item>PIZZA</item>
        <item>PASTA</item>
    </string-array>
    <string-array name="time_array">
        <item> <i>TIME</i> </item>
        <item>10.00-15.00</item>
        <item>15.00-19.00</item>
        <item>19.00-23.00</item>
    </string-array>
    <string name="app_name">Lab4</string>
    <string name="quantity_available">Availability:</string>
    <string name="action_settings">Settings</string>
    <string name="restaurant_profile">restaurant_profile</string>
    <string name="title_activity_restaurant_profile">RestaurantProfile</string>
    <string name="title_activity_my_scrolling">MyScrollingActivity</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="see_more">SEE MORE</string>
    <string name="user_name">User name</string>
    <string name="date_sample">dd/MM/yy</string>
    <string name="see_less">SEE LESS</string>
    <string name="review_title">\"Lorem ipsum\"</string>
    <string name="title_tab_menu">Menu</string>
    <string name="title_tab_reviews">Reviews</string>
    <string name="title_tab_info">Info</string>
    <string name="general_info">General Info</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="address">Address</string>
    <string name="university">Nearby University</string>
    <string name="food_and_ambience">Food and Ambience</string>
    <string name="Cuisine">Cuisine Type</string>
    <string name="shortDescription">Short Description</string>
    <string name="timetables_edit">Timetables</string>
    <string name="openingHour">Opening Hour</string>
    <string name="select">Select</string>
    <string name="closingHour">Closing Hour</string>
    <string name="timetables_info">Timetables Info</string>
    <string name="extra_info">Extra Info</string>
    <string name="payment">Payment Methods</string>
    <string name="services">Additional Services</string>
    <string name="reviews_number">Based on 144 reviews</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="show_selected">SHOW SELECTED</string>
    <string name="title_activity_make_reservation">MakeReservation</string>
    <string name="add_dialog_button">ADD</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="uncheck_dialog_title">Are you sure you want to remove this item from the cart?</string>
    <string name="ok">OK</string>
    <string name="remove">Remove</string>
    <string name="dont_remove">Don\'t remove</string>
    <string name="select_hour">Select reservation time</string>
    <string name="select_date">Select reservation date</string>
    <string name="empty_cart">The cart is empty</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="total_price">Total Price</string>
    <string name="reservation_restaurant_name">Restaurant name</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="alert_title_booking">Are you sure you want to confirm the reservation?</string>
    <string name="alert_title_review">Are you sure you want to add the review?</string>
    <string name="add_addtional_notes">Add additional notes…</string>
    <string name="title_activity_my_reservations">MyReservations</string>
    <string name="cardView_reservation_restaurant_ID">ID</string>
    <string name="cardView_reservation_restaurant_ID_title">ID</string>
    <string name="cardView_reservation_ID_title">ID</string>
    <string name="cardview_reservation_id">Reservation ID</string>
    <string name="dd_mm_yy">dd/MM/yy</string>
    <string name="hh_mm">hh/mm</string>
    <string name="n_dish">N° Dish</string>
    <string name="delete_reservation_button">DELETE</string>
    <string name="reset_button">RESET</string>
    <string name="apply_button">APPLY</string>
    <string name="specify_date_time">You need to specify the date and time</string>
    <string name="respect_time_contraints">You can\'t reserve in selected date</string>
    <string name="title_activity_filter">Filter</string>
    <string name="delete_reservation_alert_title">Are you sure you want to delete the reservation?</string>
    <string name="filter">Filter</string>
    <string name="reservation">Reservation</string>
    <string name="no_reservation_available">There are no reservations available</string>
    <string name="title_activity_display_reservation">DisplayReservation</string>
    <string name="reviews">reviews</string>
    <string name="reviews_string">reviews</string>
    <string name="itemsFormat"> items </string>
    <string name="reviewsFormat">Based on %d reviews</string>
    <string name="cart_empty_alert">Cart must contain at least one dish</string>
    <string name="food">Food</string>
    <string name="punctuality">Punctuality</string>
    <string name="location">Location</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="no_notes">There are no notes</string>
    <string name="dish_not_available">Not available</string>
    <string name="price">Price</string>
    <string name="dishes">dishes</string>
    <string name="title_activity_my_reservation">MyReservationActivity</string>
    <string name="title_activity_prova">ProvaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">Invalid Username</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="restaurateur_login">I am a restaurateur</string>
    <string name="user_login">I am a user</string>
    <string name="title_activity_home_restaurateur">HomeRestaurateur</string>
    <string name="action_daily_menu">Menu</string>
    <string name="home_name">Home</string>
    <string name="title_activity_edit_dish">Edit Dish</string>
    <string name="title_activity_daily_menu">Daily Menu</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="timetables">Timetables Notes:</string>
    <string name="campus">University Campus</string>
    <string name="edit_cover">Edit</string>
    <string name="edit_dish_name">Dish Name</string>
    <string name="edit_dish_description">Description: </string>
    <string name="edit_dish_availab_qty">Available Quantity:</string>
    <string name="edit_dish_price">Price:</string>
    <string name="new_dish">Add Dish</string>
    <string name="error_input_number">Invalid input number (Price or Quantity)</string>
    <string name="confirm_save_dish">Dish saved successfully</string>
    <string name="confirm_add_dish">Dish added successfully</string>
    <string-array name="university_array">
        <item> <i>Choose a campus... </i> </item>
        <item>PoliTo</item>
        <item>UniTo</item>
    </string-array>
    <string-array name="cuisine_array">
        <item> <i>Choose a type... </i></item>
        <item>Italian</item>
        <item>Pizza</item>
        <item>Sandwiches</item>
        <item>Ethnic</item>
    </string-array>
    <string name="title_activity_view_booking">ViewBooking</string>
    <string name="take_photo">Take a photo</string>
    <string name="gallery_image">Choose from gallery</string>
    <string name="error_save_dish">Ops! something goes wrong: dish info not saved</string>
    <string name="error_some_empty_fill">All field must be filled</string>
    <string name="error_processing_img">Ops! something goes wrong while process img</string>
    <string name="confirm_save_dishPhoto">Photo changed</string>
    <string name="error_rotating_img">Ops. Something goes wrong while rotate the image</string>
    <string name="error_save_image">Ops! Something goes wrong while saving image</string>
    <string name="error_create_newDish">Ops. Something goes wrong while create the new dish</string>
    <string name="dish_info">Dish Info</string>
    <string name="all_hours">All Hours</string>
    <string name="confirm_delete_booking">Booking evaded</string>
    <string name="delete_dish">delete_dish</string>
    <string name="confirm_delete_dish">Dish deleted</string>
    <string name="graph_title">Dishes</string>
    <string name="no_notes_in_bookings">There are no notes in this booking</string>
    <string name="booking_title">Booking</string>
    <string name="note">Notes:</string>
    <string name="confirm_profile_updated">Profile data updated</string>
    <string name="totalDishesNr">Total Dishes</string>
    <string name="horizontal_axis_label">Hour</string>
    <string name="dialog_dialog_delete">Are you sure you want to evade this booking?</string>
    <string name="ok_delete_dialog">OK</string>
    <string name="cancel_delete_dialog">Cancel</string>
    <string name="title_tab_daily_offer">Offers</string>
    <string name="first_score">food</string>
    <string name="second_score">punctuality</string>
    <string name="third_score">location</string>
    <string name="discount_summary">DISCOUNT</string>
    <string name="total_discount">Total Discount</string>
    <string name="askgps">Turn on GPS for a better user experience</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="error_connection">Connection Error</string>
    <string name="error_authentication">Authentication failed</string>
    <string name="notlocated">Cannot locate device</string>
    <string name="waitforloading">Wait for restaurant loading and retry</string>
    <string name="logout">LOGOUT</string>
    <string name="localization_permission">Give permission to localization</string>
    <string name="title_activity_add_review_activity_layout">AddReviewActivityLayoutActivity
    </string>
    <string name="score_3">Location</string>
    <string name="score_2">Punctuality</string>
    <string name="score_1">Food</string>
    <string name="give_vote">Give your vote to the restaurant</string>
    <string name="final_score">Final score</string>
    <string name="write_review">Write your review (optional)</string>
    <string name="title_add_review">Title</string>
</resources>