<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_margin="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/searchView"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:id="@+id/review_header_layout">

            <TextView
                android:id="@+id/review_user_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/user_name"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="5dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/review_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/10"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="16sp"
            android:text="@string/review_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/review_extendable_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:maxLines="3"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/review_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="10dp"
                android:text="@string/date_sample"/>

            <TextView
                android:id="@+id/review_btn_see_more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:textSize="12sp"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:text="@string/see_more"/>

        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>