<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_margin="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5">

            <ImageView
                android:id="@+id/image_restaurant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/default_img_rest_1"
                />

            <TextView
                android:id="@+id/reservation_cardview_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="10dp"
                />

            <ImageView
                android:id="@+id/delete_reservation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_white_24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardView_reservation_ID_title"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/reservation_cardview_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_reservation_id"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/reservation_cardview_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dd_mm_yy"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/reservation_cardview_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hh_mm"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/reservation_cardview_nItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_dish"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/reservation_cardview_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

        </LinearLayout>

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="0.7"-->
            <!--android:background="@color/colorAccent">-->

            <!--<TextView-->
                <!--android:id="@+id/delete_reservation_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/delete_reservation_button"-->
                <!--android:textColor="@color/white"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:drawableLeft="@drawable/ic_delete_white_24dp"-->
                <!--android:drawableStart="@drawable/ic_delete_white_24dp"-->
                <!--android:drawablePadding="5dp"-->
                <!--android:textSize="18sp"-->
                <!--/>-->
            <!---->
        <!--</RelativeLayout>-->



    </LinearLayout>

</android.support.v7.widget.CardView>