<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MakeReservationActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            >


            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view = "http://schemas.android.com/apk/res-auto"
                android:id="@+id/reservation_dish_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation = "horizontal"
                card_view:cardCornerRadius="@dimen/radius_cardView"
                android:backgroundTint="@color/colorAccent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/select_date"
                            android:textSize="14sp"/>

                        <Button
                            android:id="@+id/reservation_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select"
                            android:layout_weight="0.2"
                            android:onClick="showDatePickerDialog"
                            android:background="@color/colorAccent"
                            android:textColor="@color/white"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/activity_horizontal_margin">


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/select_hour"
                            android:textSize="14sp"/>

                        <Button
                            android:id="@+id/reservation_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select"
                            android:layout_weight="0.2"
                            android:onClick="showTimePickerDialog"
                            android:background="@color/colorAccent"
                            android:textColor="@color/white"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/reservation_additional_notes"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_addtional_notes"
                        android:inputType="textMultiLine"
                        android:textSize="14sp"
                        android:drawableLeft="@drawable/ic_assignment_black_24dp"
                        android:drawablePadding="5dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                >

                <TextView
                    android:id="@+id/total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/order_summary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/reservation_total_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_price"
                    android:textSize="18sp"
                    android:background="@color/colorPrimary"
                    android:textColor="#ffffff"
                    android:padding="5dp"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:id="@+id/discount_layout"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/discount_summary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/discount_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_discount"
                    android:textSize="18sp"
                    android:background="@color/colorPrimary"
                    android:textColor="#ffffff"
                    android:padding="5dp"
                    android:gravity="center"/>

            </LinearLayout>

            <TextView
                android:id="@+id/make_reservation_offers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OFFERS"
                android:textStyle="bold"/>

            <it.polito.mad.insane.lab4.managers.NonScrollListView
                android:id="@+id/reservation_offers_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/make_reservation_dishes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DISHES"
                android:textStyle="bold"/>

            <it.polito.mad.insane.lab4.managers.NonScrollListView
                android:id="@+id/reservation_dish_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>


    </LinearLayout>

    </ScrollView>

   </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_white_24dp" />
</android.support.design.widget.CoordinatorLayout>
